--- a/canopus/public/index.html
+++ b/canopus/public/index.html
@@ -27,7 +27,7 @@
   <title>React App</title>
 </head>
 
-<body class="bg-dark">
+<body class="bg-light">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
